apps/production/usage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage
  namespace: usage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage
  template:
    metadata:
      labels:
        app: usage
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/master
                    operator: DoesNotExist
      containers:
        - name: usage
          image: turtlez/ai-usage:main_20260721112335_5823dc66 # {"$imagepolicy": "flux-system:usage"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3011
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
