apps/production/usage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usage
  namespace: usage
spec:
  selector:
    app: usage
  ports:
    - name: http
      port: 3011
      targetPort: http
      protocol: TCP
