apps/production/usage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: usage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: usage-http
  namespace: usage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`usage.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: usage
          port: 3011
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: usage
  namespace: usage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`usage.turtleware.au`)
      kind: Rule
      services:
        - name: usage
          port: 3011
  tls:
    secretName: usage-tls
